<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_ros_pynitros</name>
  <version>3.2.5</version>
  <description>PyNITROS</description>
  <maintainer email="isaac-ros-maintainers@nvidia.com">Isaac ROS Maintainers</maintainer>
  <license>Apache License 2.0</license>
  <author>Mihir Rao</author>
  <author>Yuankun Zhu</author>
  <build_depend>isaac_ros_common</build_depend>

  
  <exec_depend>cuda_python</exec_depend>
  <exec_depend>posix_ipc</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>isaac_ros_nitros_bridge_interfaces</exec_depend>
  <exec_depend>isaac_ros_tensor_list_interfaces</exec_depend>

  <test_depend>isaac_ros_test</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
